<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/sender_input_message"
        tools:context=".SenderActivity" />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkbox_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/spinner_version_10" />

    <CheckBox
        android:id="@+id/checkbox_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkbox_10"
        android:layout_centerVertical="true"
        android:text="@string/spinner_version_14" />

    <Button
        android:id="@+id/button_start_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:onClick="startEncoding"
        android:text="@string/sender_start_transferring" />

</RelativeLayout>
